src/rules/bundle/snapshots/darklua_core__rules__bundle__test__custom_modules_identifier.snap
---
source: src/rules/bundle/mod.rs
expression: rule
---
{
  "rule": "bundler",
  "modules-identifier": "_CUSTOM_VAR",
  "require-mode": "path"
}
