src/rules/bundle/snapshots/darklua_core__rules__bundle__test__default_bundler.snap
---
source: src/rules/bundle/mod.rs
expression: rule
---
{
  "rule": "bundler",
  "require-mode": "path"
}
