src/rules/bundle/snapshots/darklua_core__rules__bundle__test__path_require_mode_with_custom_module_folder_name.snap
---
source: src/rules/bundle/mod.rs
expression: rule
---
{
  "rule": "bundler",
  "require-mode": {
    "name": "path",
    "module-folder-name": "__init__"
  }
}
