src/rules/bundle/snapshots/darklua_core__rules__bundle__test__path_require_mode_with_custom_module_folder_name_and_modules_identifier.snap
---
source: src/rules/bundle/mod.rs
expression: rule
---
{
  "rule": "bundler",
  "modules-identifier": "_CUSTOM_VAR",
  "require-mode": {
    "name": "path",
    "module-folder-name": "__init__"
  }
}
